Update Rick Waldron's affiliation

--- a/index.html
+++ b/index.html
@@ -1458,7 +1458,7 @@ pre.idl.highlight { color: #708090; }
      <dd><span><a href="https://github.com/w3c/sensors">GitHub</a> (<a href="https://github.com/w3c/sensors/issues/new">new issue</a>, <a href="https://github.com/w3c/sensors/milestone/2">level 1 issues</a>, <a href="https://github.com/w3c/sensors/issues">all issues</a>)</span>
      <dt class="editor">Editors:
      <dd class="editor p-author h-card vcard" data-editor-id="78102"><a class="p-name fn u-url url" href="http://tobie.me">Tobie Langel</a> (<span class="p-org org">Intel Corporation</span>) <a class="u-email email" href="mailto:tobie@sensors.codespeaks.com">tobie@sensors.codespeaks.com</a>
-     <dd class="editor p-author h-card vcard" data-editor-id="50572"><span class="p-name fn">Rick Waldron</span> (<span class="p-org org">jQuery Foundation</span>)
+     <dd class="editor p-author h-card vcard" data-editor-id="50572"><span class="p-name fn">Rick Waldron</span> (<span class="p-org org">JS Foundation</span>)
      <dt>Other:
      <dd><span><a href="https://github.com/w3c/web-platform-tests/tree/master/generic-sensor">Test suite</a>, <a href="https://github.com/w3c/sensors/commits/gh-pages/index.bs">version history</a></span>
     </dl>
