--- a/index.html
+++ b/index.html
@@ -1786,7 +1786,7 @@ creating unanticipated tracking mechanisms.</p>
 an indication of when the <a data-link-type="dfn" href="#concept-sensor" id="ref-for-concept-sensor-10">sensor</a> is used
 and allowing the user to disable it.
 Additionally, user agents may consider
-allowing the user to verify past sensor use patterns.</p>
+allowing the user to verify past and current sensor use patterns.</p>
    <p>Web application developers that use <a data-link-type="dfn" href="#concept-sensor" id="ref-for-concept-sensor-11">sensors</a> should
 perform a privacy impact assessment of their application
 taking all aspects of their application into consideration.</p>
