Probing for frequency readouts might increase fingerprinting risk.
Closes #99.

--- a/index.html
+++ b/index.html
@@ -1774,6 +1774,9 @@ offer the possibility of fingerprinting to identify users.
 User agents may reduce the risk by
 limiting event rates available to web application developers.</p>
    <p class="note" role="note">Note: do we really want this mitigation strategy?</p>
+   <p>Frequency polling in <a data-link-type="dfn">periodic reporting</a> mode
+might allow the fingerprinting of hardware or implementation types,
+by probing which actual frequencies are supported by the platform.</p>
    <p>Minimizing the accuracy of a sensor’s readout
 generally decreases the risk of fingerprinting.
 User agents should not provide unnecessarily verbose readouts of sensors data.
