Refer to the latest [FEATURE-POLICY] spec

--- a/index.html
+++ b/index.html
@@ -1850,7 +1850,7 @@ are only available within a <a data-link-type="dfn" href="https://w3c.github.io/
    <h4 class="heading settled" data-level="5.1.2" id="top-level-browsing-context"><span class="secno">5.1.2. </span><span class="content">Top-Level Browsing Context</span><span id="browsing-context"></span><a class="self-link" href="#top-level-browsing-context"></a></h4>
    <p>To avoid the privacy risk of
 sharing <a data-link-type="dfn" href="#sensor-readings" id="ref-for-sensor-readings②">sensor readings</a> with contexts unfamiliar to the user, <a data-link-type="dfn" href="#sensor-readings" id="ref-for-sensor-readings③">sensor readings</a> are only available in the <a data-link-type="dfn" href="https://html.spec.whatwg.org/multipage/browsers.html#top-level-browsing-context" id="ref-for-top-level-browsing-context">top-level browsing context</a>.</p>
-   <p class="note" role="note"><span>Note:</span> <a href="https://docs.google.com/document/d/1k0Ua-ZWlM_PsFCFdLMa8kaVTo32PeNZ4G7FFHqpFx4E/edit">Feature Policy</a> will allow securely relaxing those restrictions once it matures.</p>
+   <p class="note" role="note"><span>Note:</span> <a data-link-type="biblio" href="#biblio-feature-policy">[FEATURE-POLICY]</a> will allow securely relaxing those restrictions once it matures.</p>
    <h4 class="heading settled" data-level="5.1.3" id="losing-focus"><span class="secno">5.1.3. </span><span class="content">Losing Focus</span><a class="self-link" href="#losing-focus"></a></h4>
    <p>When the <a data-link-type="dfn" href="https://html.spec.whatwg.org/multipage/browsers.html#top-level-browsing-context" id="ref-for-top-level-browsing-context①">top-level browsing context</a> loses focus,
 or when a <a data-link-type="dfn" href="https://html.spec.whatwg.org/multipage/browsers.html#nested-browsing-context" id="ref-for-nested-browsing-context">nested browsing context</a> of a different <a data-link-type="dfn" href="https://html.spec.whatwg.org/multipage/browsers.html#origin-2" id="ref-for-origin-2">origin</a> <a data-link-type="dfn" href="https://html.spec.whatwg.org/multipage/interaction.html#gains-focus" id="ref-for-gains-focus">gains focus</a> (for example when the user carries out an in-game purchase
@@ -3424,6 +3424,8 @@ for their editorial input.</p>
    <dd>Domenic Denicola. <a href="https://w3ctag.github.io/design-principles/">API Design Principles</a>. 29 December 2015. URL: <a href="https://w3ctag.github.io/design-principles/">https://w3ctag.github.io/design-principles/</a>
    <dt id="biblio-extennnnsible">[EXTENNNNSIBLE]
    <dd><a href="https://extensiblewebmanifesto.org/">The Extensible Web Manifesto</a>. 10 June 2013. URL: <a href="https://extensiblewebmanifesto.org/">https://extensiblewebmanifesto.org/</a>
+   <dt id="biblio-feature-policy">[FEATURE-POLICY]
+   <dd><a href="https://wicg.github.io/feature-policy/">Feature Policy</a>. Living Standard. URL: <a href="https://wicg.github.io/feature-policy/">https://wicg.github.io/feature-policy/</a>
    <dt id="biblio-geolocation-api">[GEOLOCATION-API]
    <dd>Andrei Popescu. <a href="http://dev.w3.org/geo/api/spec-source.html">Geolocation API Specification 2nd Edition</a>. URL: <a href="http://dev.w3.org/geo/api/spec-source.html">http://dev.w3.org/geo/api/spec-source.html</a>
    <dt id="biblio-orientation-event">[ORIENTATION-EVENT]
